--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "qs": "^6.7.0",
     "query-string": "^4.3.4",
     "react": "^17.0.2",
